[metadata]
name = zhipuai_langchain
version = 0.1
description_file = README.md
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Lin calvin
maintainer_email = calvinchaochao@outlook.com

[options]
packages=zhipuai_langchain
include_package_data=True 
python_requires = >=3.7
install_requires =
    zhipuai
    langchain
